# worldmap

./: .dockerignore  .env.tmpl  .gitignore  Dockerfile.db  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  install.sh  map_system_daemon.py  pyproject.toml  wallpaper_update_daemon.py  wallpaper_updater.sh  worldmap-install.sh  worldmap.sh
.github/workflows/: docker-publish.yml
config/: worldmap.conf  worldmap.conf.example
config/database/: 001_create_dbs.sql
markers/: base_markers_global.txt
scripts/: do_harvest_shipdata  do_map_updates  harvest_ship_data  run_xplanet  update_clouds  update_clouds_nasa  update_composite_image  update_isobars  update_quakes  update_shipping  update_storms  update_volcanoes
src/worldmap/: api.py  harvester.py  map_builder.py
src/worldmap/lib/: config.py  shipping.py
src/worldmap/tasks/: clouds.py  clouds_nasa.py  common.py  composite.py  harvester.py  isobars.py  ozone.py  precipitation.py  quakes.py  renderer.py  satellites.py  shipping.py  sst.py  storms.py  volcanoes.py  wind.py
tests/: common.py  test_clouds.py  test_clouds_nasa.py  test_composite.py  test_currents.py  test_isobars.py  test_lightning.py  test_precipitation.py  test_quakes.py  test_renderer.py  test_sst.py  test_storms.py  test_temperature.py  test_volcanoes.py  test_waves.py  test_wind.py
tools/: check_noaa_gws_layers.py  overlay_outlines.py
ui/: index.html
