[project]
name = "worldmap"
version = "0.1.0"
description = "Builds overlays and marker files for Xplanet"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Paul Waite", email = "paulwaite87@gmail.com" },
]
dependencies = [
    "beautifulsoup4==4.14.3",
    "black>=26.3.1",
    "cartopy==0.25.0",
    "cfgrib==0.9.15.1",
    "configparser==7.2.0",
    "createcloudmap==0.99.0",
    "dask==2026.3.0",
    "datetime==6.0",
    "eccodes==2.46.0",
    "eccodes-python==0.9.9",
    "idna==3.11",
    "matplotlib==3.10.8",
    "netcdf4==1.7.4",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "pydap==3.5.9",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "requests==2.33.1",
    "ruff>=0.15.11",
    "scipy==1.17.1",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "watchdog>=6.0.0",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "xarray==2026.4.0",
    "zope-interface==8.3",
]
